alignment fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -129,7 +129,7 @@ width: 48.6%;
 border: 1px solid rgba(233, 68, 68, 0.20);
 background: rgba(233, 68, 68, 0.05);
 }
-.box3 > h2 ,p{
+.box1 >h2+p,.box2 >h2+p, .box3 > h2+p{
     text-align: left;
 }
 /* newsleter styles */
